Unit tests added for OrderRepository
Unit tests for creation and deletion.

--- a/Webshop.Order.Persistence/Webshop.Order.Persistence.csproj
+++ b/Webshop.Order.Persistence/Webshop.Order.Persistence.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Webshop.Data.Persistence\Webshop.Data.Persistence.csproj" />
+    <ProjectReference Include="..\Webshop.Order.Application\Webshop.Order.Application.csproj" />
+  </ItemGroup>
+
 </Project>
