--- a/Webshop.Application/Webshop.Application.csproj
+++ b/Webshop.Application/Webshop.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Webshop.Domain\Webshop.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
