--- a/Webshop.Order.Application/Webshop.Order.Application.csproj
+++ b/Webshop.Order.Application/Webshop.Order.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Webshop.Application\Webshop.Application.csproj" />
+  </ItemGroup>
+
 </Project>
