--- a/.github/workflows/dotnet-tests.yml
+++ b/.github/workflows/dotnet-tests.yml
@@ -24,11 +24,18 @@ jobs:
     - name: Test with coverage
       run: |
         if [ "$(basename $GITHUB_REPOSITORY)" == "tamaspalya/GeorgiaTechOrderHandlingSln" ]; then
-          dotnet test GeorgiaTechOrderHandlingSln/Test/Webshop.Order.Persistence.Test/Webshop.Order.Persistence.Test.csproj --configuration Release --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=TestResults/coverage.cobertura.xml
+        dotnet test GeorgiaTechOrderHandlingSln/Test/Webshop.Order.Persistence.Test/Webshop.Order.Persistence.Test.csproj --configuration Release --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=TestResults/coverage.cobertura.xml
+        dotnet test GeorgiaTechOrderHandlingSln/Test/Webshop.Service.Test/Webshop.Service.Test.csproj --configuration Release --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=TestResults/coverage.cobertura.xml
         fi
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./Webshop.Order.Persistence.Test/TestResults/*/coverage.cobertura.xml
+        fail_ci_if_error: true
+    - name: Upload coverage to Codecov for Webshop.Service.Test
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./Webshop.Service.Test/TestResults/*/coverage.cobertura.xml
         fail_ci_if_error: true
