Order API implemented
OrdersApi implemented in clean architecture manner

--- a/Webshop.Order.Api/appsettings.json
+++ b/Webshop.Order.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=psuwebshop;User Id=sa;Password=PSU@password"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
