--- a/Webshop.Order.Application/Webshop.Order.Application.csproj
+++ b/Webshop.Order.Application/Webshop.Order.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Webshop.Application\Webshop.Application.csproj" />
   </ItemGroup>
 
