--- a/Webshop.Order.Api/Webshop.Order.Api.csproj
+++ b/Webshop.Order.Api/Webshop.Order.Api.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\Webshop.Domain\Webshop.Domain.csproj" />
     <ProjectReference Include="..\Webshop.Order.Application\Webshop.Order.Application.csproj" />
     <ProjectReference Include="..\Webshop.Order.Persistence\Webshop.Order.Persistence.csproj" />
+    <ProjectReference Include="..\Webshop.Service\Webshop.Service.csproj" />
   </ItemGroup>
 
 </Project>
