--- a/Webshop.Order.Api/appsettings.json
+++ b/Webshop.Order.Api/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=psuwebshop;User Id=sa;Password=PSU@password"
   },
+  "CustomerApiClient": {
+    "BaseUrl": "http://localhost:8085/api"
+  },
+  "CatalogApiClient": {
+    "BaseUrl": "http://localhost:8084/api"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
