--- a/Webshop.Order.Application/Webshop.Order.Application.csproj
+++ b/Webshop.Order.Application/Webshop.Order.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -15,6 +15,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Webshop.Application\Webshop.Application.csproj" />
+    <ProjectReference Include="..\Webshop.Service\Webshop.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientFeatures\Catalog\UpdateProduct\" />
   </ItemGroup>
 
 </Project>
